styles.css
:root {
  /* variables */
  font-size: 16px;
  --cg-black: rgb(30, 32, 32);
  --cg-blue: rgb(36, 94, 255);
  --cg-grey: rgb(243, 243, 243);
  --cg-white: rgb(255, 255, 255);
  --bg-primary: #23232e;
  --bg-main: #2e2e3e;
  --bg-secondary: #141418;
  --text-primary: #b6b6b6;
}

html {
  height: 100%;
}

body {
  background: var(--cg-grey);
  position: relative;
  min-height: 100vh;
  padding: 0;
  margin: 0;
  font-family: monospace;
}

body::-webkit-scrollbar {
  width: 0.25rem;
}

body::-webkit-scrollbar-track {
  background: black;
}

body::-webkit-scrollbar-thumb {
  background: mediumaquamarine;
}

.logo {
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 1rem;
  text-align: center;
  color: var(--text-secondary);
  background: var(--bg-secondary);
  font-size: 1.5rem;
  letter-spacing: 0.3ch;
  width: 100%;
}

.logo svg {
  transform: rotate(0deg);
  transition: var(--transition-speed);
}

.logo-text {
  display: inline;
  position: absolute;
  left: -999px;
  transition: var(--transition-speed);
}

.navbar:hover .logo svg {
  transform: rotate(-180deg);
}

/* CSS for navigation */

.navbar {
  width: 5rem;
  height: 100vh;
  position: fixed;
  background-color: var(--bg-primary);
  transition: width 200ms ease;
}

.nav-item {
  width: 5rem;
}

.nav-list {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.nav-link {
  display: flex;
  align-items: center;
  height: 5rem;
  color: var(--text-primary);
  text-decoration: none;
  filter: grayscale(100%) opacity(0.7);
  transition: 200ms;
}

.nav-link:hover {
  filter: grayscale(0%) opacity(1);
  background: var(--bg-secondary);
}

.link-text {
  display: none;
  margin-left: 1rem;
}

.nav-link img {
  min-width: 3rem;
  margin: 0 1rem;
}

.navbar:hover {
  width: 16rem;
}

.navbar:hover .link-text {
  display: block;
}

.fa-primary {
  color: blue;
}

EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE
/*   .navbar {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  width: 100%;
  height: 7%;
  z-index: 10;

  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: center;

  background-color: var(--cg-black);
  color: var(--cg-white);
  padding: 0px 0px;

} */

/* .nav-list {
  display: flex;
  flex-direction: row;
  position: relative;
  right: 30px;
  list-style: none;

} */

.navbar a {
  color: var(--cg-white);
  font-weight: bold;
  margin: 0 12px;
  text-decoration: none;
  letter-spacing: 2px;

  font-family: monospace;
}

.navbar a:active {
  color: var(--cg-blue);
}

.logo a {
  font-family: Georgia;
}

.logo a:hover {
  text-decoration: None;
  color: green;
}

main {
  margin-left: 5rem;
  padding: 0 20px 40px 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--bg-main);
  color: rgb(243, 243, 243);
}

.page-title {
  display: flex;
  justify-content: center;
  font-size: 40px;
  color: #f8f8f8;
  font-family: Public Sans;
}

EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE


/* CSS for portfolio grid */

.project-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 90%;
}

.project {
  align-items: center;
  border: 1px solid rgb(79, 192, 202);
  border-radius: 30px;
  border-width: 5px;
  width: 95%;
  margin-bottom: 30px;
  padding: 15px;
  transition: transform 300ms ease, background-color 900ms ease;
  display: flex;
}

.neat-image {
  width: 300px;
  height: 300px;
  padding-right: 30px;
}

.vid {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 10000;
  background: rgba(0, 0, 0, 0.95);
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  visibility: hidden;
  opacity: 0;
}

.vid.active {
  visibility: visible;
  opacity: 1;
}

.vid video {
  position: relative;
  max-width: 900px;
}

@media (max-width: 991px) {
  .vid video {
    max-width: 90%;
  }
}

.project:hover {
  transform: translateY(-5px);
  background-color: var(--bg-primary);
}

/* CSS for home page */

.about {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 20px;
  background-color: #f8f8f8;
  border: 1px solid #ccc;
  border-radius: 5px;
  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
}

.about-image img {
  max-width: 300px;
  border-radius: 3px;
  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
}

.about-text {
  flex: 1;
  margin-left: 20px;
}

.about-text h2 {
  font-size: 24px;
  margin-bottom: 10px;
}

.about-text p {
  font-size: 16px;
  line-height: 1.5;
}

/* CSS for resume page */

.button {
  background-color: var(--cg-black);
  border: none;
  color: var(--cg-white);

  font-family: monospace;

  padding: 5px 7px;
  text-align: center;

  border-radius: 2px;
}

.button:hover {
  background-color: var(--cg-blue);
}

.resume h2 {
  font-family: Georgia;
}

/* CSS for contact form */

label {
  display: flex;
  flex-direction: column;
  height: 100%;
  margin-bottom: 8px;
  font-family: Georgia;
  font-weight: bold;
}

.last-padding {
  padding-bottom: 400px;
}

input[type="text"],
input[type="email"],
textarea {
  width: 100%;
  padding: 10px;
  margin-bottom: 15px;
  border: 1px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
  resize: none;
}

/* Add some spacing to the form */
form {
  width: 500px;
  margin: 0 auto;
}

/* CSS for footer */

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--cg-black);
  color: var(--cg-white);
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

